assets/editor/js/core/grammar.js
//------------------------------------------------
// grammar.js
// Progen3D grammar parser + runtime + debugger
//------------------------------------------------

if (typeof globalThis !== "undefined") {
    globalThis.PG3D_GRAMMAR_VERSION = "20260315-random-vars";
}

function pg3dEmitParseConsole(kind, message, meta) {
    try {
        if (typeof globalThis !== "undefined" && typeof globalThis.PG3D_LOG === "function") {
            globalThis.PG3D_LOG(kind, message, meta);
            return;
        }
    } catch (_) {}
    try {
        const fn = kind === "error" ? console.error : (kind === "warn" ? console.warn : console.log);
        fn.call(console, message, meta || "");
    } catch (_) {}
}

function pg3dExtractLineColFromMessage(message) {
    const text = String(message || "");
    const match = text.match(/@(\d+):(\d+)/);
    if (!match) return null;
    return {
        line: Number(match[1]),
        col: Number(match[2])
    };
}

function pg3dLineSnippet(text, line) {
    const lines = String(text || "").split(/\r\n|\r|\n/);
    return lines[Math.max(0, (Number(line) || 1) - 1)] || "";
}

// Parser-local token type renamed to avoid collision with lexer-token.js
class GrammarToken {
    constructor(type, value, pos = 0, line = 1, col = 1, endPos = pos) {
        this.type = type;
        this.value = value;
        this.pos = pos;
        this.line = line;
        this.col = col;
        this.endPos = endPos;
    }
}

class GrammarTokenizer {
    constructor(text, options = {}) {
        this.text = text || "";
        this.pos = 0;
        this.line = 1;
        this.col = 1;

        this.emitWhitespace = options.emitWhitespace !== false;
        this.emitNewlines = options.emitNewlines !== false;
        this.debugEnabled = !!options.debug;

        // Full token stream for editor/highlighting
        this.tokens = [];
        // Parser-visible stream excluding ws/nl/comments
        this.parserTokens = [];
        this.stream = this.parserTokens;

        this.index = 0;
        this.tokenDebugLog = [];

        this.tokenize();
        this.parserTokens = this.normalizeParserTokens(this.parserTokens);
        this.stream = this.parserTokens;
    }

    logDebug(type, payload = {}) {
        if (!this.debugEnabled) return;
        this.tokenDebugLog.push({
            type,
            pos: this.pos,
            line: this.line,
            col: this.col,
            ...payload
        });
    }

    advance(count = 1) {
        for (let i = 0; i < count; i++) {
            const ch = this.text[this.pos];
            if (ch === "\n") {
                this.pos++;
                this.line++;
                this.col = 1;
            } else {
                this.pos++;
                this.col++;
            }
        }
    }

    pushToken(type, value, startPos, startLine, startCol, endPos, includeInParse = true) {
        const tok = new GrammarToken(type, value, startPos, startLine, startCol, endPos);
        this.tokens.push(tok);
        if (includeInParse) this.parserTokens.push(tok);
        this.logDebug("token", {
            tokenType: type,
            tokenValue: value,
            startPos,
            startLine,
            startCol,
            endPos,
            includeInParse
        });
        return tok;
    }

    tokenize() {
        const s = this.text;
        const n = s.length;

        while (this.pos < n) {
            const c = s[this.pos];
            const startPos = this.pos;
            const startLine = this.line;
            const startCol = this.col;

            if (c === "\n") {
                if (this.emitNewlines) {
                    this.pushToken("nl", "\n", startPos, startLine, startCol, startPos + 1, false);
                }
                this.advance(1);
                continue;
            }

            if (c === "\r") {
                if (s[this.pos + 1] === "\n") {
                    if (this.emitNewlines) {
                        this.pushToken("nl", "\r\n", startPos, startLine, startCol, startPos + 2, false);
                    }
                    this.advance(2);
                } else {
                    if (this.emitNewlines) {
                        this.pushToken("nl", "\r", startPos, startLine, startCol, startPos + 1, false);
                    }
                    this.advance(1);
                }
                continue;
            }

            if (c === " " || c === "\t") {
                let raw = "";
                while (this.pos < n) {
                    const ch = s[this.pos];
                    if (ch === " " || ch === "\t") {
                        raw += ch;
                        this.advance(1);
                    } else {
                        break;
                    }
                }
                if (this.emitWhitespace) {
                    this.pushToken("ws", raw, startPos, startLine, startCol, this.pos, false);
                }
                continue;
            }

            if (/\s/.test(c)) {
                let raw = "";
                while (this.pos < n) {
                    const ch = s[this.pos];
                    if (ch !== "\n" && ch !== "\r" && /\s/.test(ch)) {
                        raw += ch;
                        this.advance(1);
                    } else {
                        break;
                    }
                }
                if (this.emitWhitespace && raw.length > 0) {
                    this.pushToken("ws", raw, startPos, startLine, startCol, this.pos, false);
                }
                continue;
            }

            if (c === "/" && s[this.pos + 1] === "/") {
                let raw = "";
                while (this.pos < n && s[this.pos] !== "\n" && s[this.pos] !== "\r") {
                    raw += s[this.pos];
                    this.advance(1);
                }
                this.pushToken("comment_line", raw, startPos, startLine, startCol, this.pos, false);
                continue;
            }

            if (c === "/" && s[this.pos + 1] === "*") {
                this.advance(2);
                let raw = "/*";
                while (this.pos < n && !(s[this.pos] === "*" && s[this.pos + 1] === "/")) {
                    raw += s[this.pos];
                    this.advance(1);
                }
                if (this.pos >= n) {
                    throw new Error(`Unterminated block comment at ${startPos} (line ${startLine}, col ${startCol})`);
                }
                raw += "*/";
                this.advance(2);
                this.pushToken("comment_block", raw, startPos, startLine, startCol, this.pos, false);
                continue;
            }

            if (/[A-Za-z_]/.test(c)) {
                this.advance(1);
                while (this.pos < n && /[A-Za-z0-9_]/.test(s[this.pos])) this.advance(1);
                const id = s.slice(startPos, this.pos);
                this.pushToken("id", id, startPos, startLine, startCol, this.pos, true);
                continue;
            }

            if (/[0-9]/.test(c) || (c === "." && /[0-9]/.test(s[this.pos + 1] || ""))) {
                let sawDot = false;

                if (c === ".") {
                    sawDot = true;
                    this.advance(1);
                } else {
                    this.advance(1);
                }

                while (this.pos < n) {
                    const ch = s[this.pos];
                    if (/[0-9]/.test(ch)) {
                        this.advance(1);
                        continue;
                    }
                    if (ch === "." && !sawDot) {
                        sawDot = true;
                        this.advance(1);
                        continue;
                    }
                    break;
                }

                const raw = s.slice(startPos, this.pos);
                const value = Number(raw);
                if (!Number.isFinite(value)) {
                    throw new Error(`Invalid number '${raw}' at ${startPos} (line ${startLine}, col ${startCol})`);
                }
                this.pushToken("num", value, startPos, startLine, startCol, this.pos, true);
                continue;
            }

            const two = s.slice(this.pos, this.pos + 2);

            if (["<=", ">=", "==", "!=", "->"].includes(two)) {
                this.pushToken(two, two, startPos, startLine, startCol, this.pos + 2, true);
                this.advance(2);
                continue;
            }

            if ("+-*/^()[]<>,:?|;".includes(c)) {
                this.pushToken(c, c, startPos, startLine, startCol, this.pos + 1, true);
                this.advance(1);
                continue;
            }

            throw new Error(`Unknown character '${c}' at ${this.pos} (line ${this.line}, col ${this.col})`);
        }

        this.pushToken("eof", "eof", this.pos, this.line, this.col, this.pos, true);

        this.logDebug("summary", {
            totalTokens: this.tokens.length,
            parseTokens: this.parserTokens.length,
            wsTokens: this.tokens.filter(t => t.type === "ws").length,
            nlTokens: this.tokens.filter(t => t.type === "nl").length,
            commentTokens: this.tokens.filter(t => t.type === "comment_line" || t.type === "comment_block").length
        });
    }

    normalizeParserTokens(tokens) {
        const out = [];

        for (let i = 0; i < tokens.length; i++) {
            const t0 = tokens[i];
            const t1 = tokens[i + 1];
            const t2 = tokens[i + 2];
            const t3 = tokens[i + 3];
            const t4 = tokens[i + 4];
            const t5 = tokens[i + 5];
            const t6 = tokens[i + 6];
            const t7 = tokens[i + 7];

            out.push(t0);

            if (
                t0 && t0.type === "*" &&
                t1 && (t1.type === "id" || t1.type === "num") &&
                t2 && (t2.type === "+" || t2.type === "-") &&
                t3 && (t3.type === "id" || t3.type === "num") &&
                t4 && t4.type === ")" &&
                t5 && t5.type === "/" &&
                t6 && (t6.type === "id" || t6.type === "num") &&
                t7 && t7.type === ")"
            ) {
                out.push(new GrammarToken("(", "(", t0.endPos, t0.line, t0.col + String(t0.value).length, t0.endPos));
            }
        }

        return out;
    }

    peek(offset = 0) {
        let cursor = this.index;
        let remaining = offset;

        while (cursor < this.stream.length) {
            const tok = this.stream[cursor];
            if (!this.isSkippableParseToken(tok)) {
                if (remaining === 0) return tok;
                remaining--;
            }
            cursor++;
        }

        return this.stream[this.stream.length - 1] || null;
    }

    next() {
        while (this.index < this.stream.length) {
            const tok = this.stream[this.index++];
            if (!this.isSkippableParseToken(tok)) return tok;
        }
        return this.stream[this.stream.length - 1] || null;
    }

    match(type, value = undefined) {
        const t = this.peek();
        if (!t) return false;
        if (t.type !== type) return false;
        if (value !== undefined && t.value !== value) return false;
        this.index++;
        return true;
    }

    expect(type, value = undefined, message = "") {
        const t = this.next();
        if (!t || t.type !== type || (value !== undefined && t.value !== value)) {
            const got = t ? `${t.type}:${t.value} @${t.line}:${t.col}` : "EOF";
            const want = value !== undefined ? `${type}:${value}` : type;
            throw new Error(message || `Expected ${want}, got ${got}`);
        }
        return t;
    }

    expectId(message = "Expected identifier") {
        const t = this.expect("id", undefined, message);
        return t.value;
    }

    eof() {
        const t = this.peek();
        return !!t && t.type === "eof";
    }

    reset() {
        this.index = 0;
        return this;
    }

    isSkippableParseToken(t) {
        if (!t) return false;
        return t.type === "ws" || t.type === "nl" || t.type === "comment_line" || t.type === "comment_block";
    }

    getAllTokens() {
        return [...this.tokens];
    }

    getParseTokens() {
        return [...this.parserTokens];
    }

    getDebugInfo() {
        return {
            totalTokens: this.tokens.length,
            parseTokens: this.parserTokens.length,
            visualTokens: this.tokens.filter(t => t.type === "ws" || t.type === "nl").length,
            commentTokens: this.tokens.filter(t => t.type === "comment_line" || t.type === "comment_block").length,
            debugLog: [...this.tokenDebugLog]
        };
    }
}

class ExpressionParser {
    constructor(tokens) {
        this.tokens = tokens;
        this.stopAtSpacedUnaryBoundary = false;
        this.parenDepth = 0;
        this.boundaryParenDepth = 0;
        this.builtinFunctionNames = new Set(["sin", "cos", "tan", "abs", "sqrt", "floor", "ceil", "min", "max", "float", "int", "rand"]);
    }

    withSpacedUnaryBoundary(enabled, fn) {
        const previous = this.stopAtSpacedUnaryBoundary;
        const previousBoundaryDepth = this.boundaryParenDepth;
        this.stopAtSpacedUnaryBoundary = !!enabled;
        if (enabled) this.boundaryParenDepth = this.parenDepth;
        try {
            return fn();
        } finally {
            this.stopAtSpacedUnaryBoundary = previous;
            this.boundaryParenDepth = previousBoundaryDepth;
        }
    }

    parseExpression(options = undefined) {
        if (options && typeof options === "object" && Object.prototype.hasOwnProperty.call(options, "stopAtSpacedUnaryBoundary")) {
            return this.withSpacedUnaryBoundary(options.stopAtSpacedUnaryBoundary, () => this.parseComparison());
        }
        return this.parseComparison();
    }

    parseExpressionList(closeType = ")") {
        const args = [];
        if (this.tokens.match(closeType)) return args;

        while (true) {
            args.push(this.parseExpression());
            if (this.tokens.match(closeType)) break;
            if (this.tokens.match(",")) continue;
            if (this.isExpressionStart(this.tokens.peek())) continue;
            const t = this.tokens.peek();
            const got = t ? `${t.type}:${t.value}` : "EOF";
            throw new Error(`Expected "," or ${closeType} in argument list, got ${got}`);
        }

        return args;
    }

    isExpressionStart(t) {
        if (!t) return false;
        return t.type === "num" || t.type === "id" || t.type === "(" || t.type === "-";
    }

    parseComparison() {
        let left = this.parseAdd();

        while (true) {
            const t = this.tokens.peek();
            if (!t) break;

            if (["<", ">", "<=", ">=", "==", "!="].includes(t.type)) {
                this.tokens.next();
                const right = this.parseAdd();
                left = {
                    type: "compare",
                    op: t.type,
                    left,
                    right
                };
                continue;
            }
            break;
        }

        return left;
    }

    parseAdd() {
        let left = this.parseMul();

        while (true) {
            const t = this.tokens.peek();
            if (!t) break;

            if (t.type === "+" || t.type === "-") {
                if (this.stopAtSpacedUnaryBoundary && t.type === "-" && this.isSpacedUnaryBoundary()) {
                    break;
                }
                this.tokens.next();
                const right = this.parseMul();
                left = {
                    type: "bin",
                    op: t.type,
                    left,
                    right
                };
                continue;
            }
            break;
        }

        return left;
    }

    isSpacedUnaryBoundary() {
        const current = this.tokens.peek();
        const next = this.tokens.peek(1);
        const previous = this.tokens.stream && this.tokens.index > 0 ? this.tokens.stream[this.tokens.index - 1] : null;
        if (!current || !next || !previous) return false;
        if (current.type !== "-") return false;
        if (!this.isExpressionStart(next)) return false;
        if (this.parenDepth !== this.boundaryParenDepth) return false;
        return current.pos > previous.endPos;
    }

    hasWhitespaceGapBetween(a, b) {
        if (!a || !b) return false;
        return Number(b.pos) > Number(a.endPos);
    }

    parseMul() {
        let left = this.parsePow();

        while (true) {
            const t = this.tokens.peek();
            if (!t) break;

            if (t.type === "*" || t.type === "/") {
                this.tokens.next();
                const right = this.parsePow();
                left = {
                    type: "bin",
                    op: t.type,
                    left,
                    right
                };
                continue;
            }
            break;
        }

        return left;
    }

    parsePow() {
        let left = this.parseUnary();

        const t = this.tokens.peek();
        if (t && t.type === "^") {
            this.tokens.next();
            const right = this.parsePow();
            left = {
                type: "bin",
                op: "^",
                left,
                right
            };
        }

        return left;
    }

    parseUnary() {
        const t = this.tokens.peek();
        if (t && t.type === "-") {
            this.tokens.next();
            return {
                type: "neg",
                value: this.parseUnary()
            };
        }
        return this.parsePrimary();
    }

    parsePrimary() {
        this.skipRedundantClosingParensBeforeExpressionStart();
        const t = this.tokens.peek();

        if (!t) {
            throw new Error("Unexpected end of expression");
        }

        if (t.type === "num") {
            this.tokens.next();
            return { type: "num", value: t.value };
        }

        if (t.type === "id") {
            const nameTok = this.tokens.next();
            const name = nameTok.value;
            const nextTok = this.tokens.peek();
            const hasSpacedParen = nextTok && nextTok.type === "(" && this.hasWhitespaceGapBetween(nameTok, nextTok);
            const allowCall = nextTok && nextTok.type === "(" && (
                !this.stopAtSpacedUnaryBoundary ||
                this.builtinFunctionNames.has(name)
            );

            if (allowCall) {
                this.tokens.match("(");
                const args = this.parseExpressionList(")");

                if (this.builtinFunctionNames.has(name)) {
                    return {
                        type: "func",
                        name,
                        args
                    };
                }

                return {
                    type: "call_expr",
                    name,
                    args
                };
            }

            return { type: "var", name };
        }

        if (this.tokens.match("(")) {
            this.parenDepth += 1;
            try {
                const e = this.parseExpression();
                this.tokens.expect(")");
                return e;
            } finally {
                this.parenDepth = Math.max(0, this.parenDepth - 1);
            }
        }

        throw new Error(`Bad expression near ${t.type}:${t.value} @${t.line}:${t.col}`);
    }

    skipRedundantClosingParensBeforeExpressionStart() {
        while (true) {
            const current = this.tokens.peek();
            const next = this.tokens.peek(1);
            if (!current || current.type !== ")" || !this.isExpressionStart(next)) return;
            this.tokens.next();
        }
    }
}

class GrammarParser {
    constructor(text, options = {}) {
        this.options = options || {};
        this.grammarTokenizer = new GrammarTokenizer(text, {
            emitWhitespace: this.options.emitWhitespace !== false,
            emitNewlines: this.options.emitNewlines !== false,
            debug: !!this.options.debug
        });
        this.tokens = this.grammarTokenizer;
        this.expr = new ExpressionParser(this.tokens);
        this.ruleOrder = [];
        this.rules = new Map();
        this.debug = [];
    }

    log(type, payload = {}) {
        if (!this.options.debug) return;
        this.debug.push({ type, ...payload });
    }

    parse() {
        this.log("parse_start", {
            totalTokens: this.tokens.tokens.length,
            parseTokens: this.tokens.parserTokens.length
        });

        while (!this.tokens.eof()) {
            if (this.tokens.peek().type === "eof") break;
            const rule = this.parseRule();
            if (!this.rules.has(rule.name)) {
                this.rules.set(rule.name, []);
                this.ruleOrder.push(rule.name);
            }
            this.rules.get(rule.name).push(rule);
        }

        const result = {
            type: "grammar",
            entry: this.ruleOrder[0] || "Start",
            order: [...this.ruleOrder],
            rules: this.rules,
            debug: {
                parserEvents: [...this.debug],
                lexer: this.tokens.getDebugInfo()
            }
        };

        this.log("parse_done", {
            entry: result.entry,
            ruleCount: this.ruleOrder.length
        });

        return result;
    }

    parseRule() {
        const name = this.tokens.expectId();

        let params = [];
        if (this.tokens.match("(")) {
            params = this.parseIdentifierList(")");
        }

        let repeatExpr = null;
        let probability = null;

        if (this.isExpressionStart(this.tokens.peek())) {
            repeatExpr = this.expr.parseExpression();
        }

        if (this.tokens.match(";")) {
            probability = this.expr.parseExpression();
        }

        this.tokens.expect("->");

        const stages = this.parseRuleStages();

        const rule = {
            type: "rule",
            name,
            params,
            repeatExpr,
            probability,
            stages
        };

        this.log("rule", {
            name,
            params: [...params],
            hasRepeat: !!repeatExpr,
            hasProbability: !!probability,
            preCount: stages.pre.length,
            mainCount: stages.main.length,
            postCount: stages.post.length
        });

        return rule;
    }

    parseRuleStages() {
        const stage0 = this.parseSequence(["|", "eof"]);
        if (!this.tokens.match("|")) {
            return {
                pre: [],
                main: stage0,
                post: []
            };
        }

        const stage1 = this.parseSequence(["|", "eof"]);
        if (!this.tokens.match("|")) {
            return {
                pre: stage0,
                main: stage1,
                post: []
            };
        }

        const stage2 = this.parseSequence(["|", "eof"]);
        return {
            pre: stage0,
            main: stage1,
            post: stage2
        };
    }

    parseSequence(stopTypes = ["]", "|", "eof"]) {
        const list = [];

        while (true) {
            const t = this.tokens.peek();
            if (!t) break;
            if (stopTypes.includes(t.type)) break;
            if (this.isRuleHeaderAhead()) break;

            list.push(this.parseStatement());
        }

        return list;
    }

    isRuleHeaderAhead() {
        return this.isRuleHeaderAheadAt(0);
    }

    isRuleHeaderAheadAt(offset = 0) {
        const first = this.tokens.peek(offset);
        if (!first || first.type !== "id") return false;
        if (!this.isAtLogicalLineStart(offset)) return false;

        let idx = offset + 1;
        let depth = 0;

        while (true) {
            const t = this.tokens.peek(idx);
            if (!t) return false;
            if (t.type === "eof") return false;
            if (t.line > first.line) return false;

            if (t.type === "(") {
                depth += 1;
                idx += 1;
                continue;
            }

            if (t.type === ")") {
                if (depth === 0) return false;
                depth -= 1;
                idx += 1;
                continue;
            }

            if (depth > 0) {
                idx += 1;
                continue;
            }

            if (t.type === "->") return true;
            if (t.type === "[" || t.type === "]" || t.type === "|" || t.type === "?" || t.type === ":") return false;

            idx += 1;
        }
    }

    isAtLogicalLineStart(offset = 0) {
        const absoluteIndex = this.tokens.index + offset;
        if (absoluteIndex <= 0) return true;
        const parseTokens = this.tokens.getParseTokens();
        const prev = parseTokens[absoluteIndex - 1] || null;
        const current = this.tokens.peek(offset);
        if (!current) return false;
        if (!prev) return true;
        return current.line > prev.line;
    }

    parseStatement() {
        const t = this.tokens.peek();

        if (t.type === "[") return this.parseGroup();
        if (t.type === "?") return this.parseConditional();

        if (t.type === "id") {
            const v = t.value;
            if (v === "R" && (this.tokens.peek(1)?.type === "*" || this.tokens.peek(1)?.type === "id")) {
                return this.parseRandomVariable();
            }
            if (["T", "S", "A", "R", "DSX", "DSY", "DSZ", "DTX", "DTY", "DTZ", "GDSX", "GDSY", "GDSZ", "GDTX", "GDTY", "GDTZ"].includes(v)) {
                return this.parseTransformLike();
            }
            if (v === "I") {
                return this.parseInstance();
            }
            return this.parseRuleCallOrVariable();
        }

        throw new Error(`Unexpected token in statement: ${t.type}:${t.value} @${t.line}:${t.col}`);
    }

    parseRandomVariable() {
        const opTok = this.tokens.expect("id");
        let integer = false;

        if (this.tokens.match("*")) {
            integer = true;
        }

        const name = this.tokens.expectId("Expected variable name after R");
        if (!this.tokens.peek() || this.tokens.peek().type !== "(") {
            return {
                type: "reroll_variable",
                name,
                pos: opTok.pos,
                line: opTok.line,
                col: opTok.col
            };
        }
        this.tokens.expect("(", undefined, `Expected "(" after random variable ${name}`);
        const minExpr = this.expr.parseExpression();
        const maxExpr = this.expr.parseExpression();
        this.tokens.expect(")");

        return {
            type: "random_variable",
            name,
            minExpr,
            maxExpr,
            integer,
            pos: opTok.pos,
            line: opTok.line,
            col: opTok.col
        };
    }

    parseGroup() {
        this.tokens.expect("[");
        const seq = this.parseSequence(["]"]);
        this.tokens.expect("]");
        return {
            type: "group",
            seq
        };
    }

    parseConditional() {
        this.tokens.expect("?");
        this.tokens.expect("(");
        const cond = this.expr.parseExpression();
        this.tokens.expect(")");

        if (this.hasConditionalBranchSeparatorAhead()) {
            const branchMain = this.parseSequence([":", "]", "|", "eof"]);
            this.tokens.expect(":");
            const branchAlt = this.parseSequence(["]", "|", "eof"]);
            return {
                type: "conditional",
                cond,
                branchMain,
                branchAlt
            };
        }

        const ruleMain = this.parseRuleCall();
        return {
            type: "conditional",
            cond,
            ruleMain,
            ruleAlt: null,
            branchMain: null,
            branchAlt: null
        };
    }

    hasConditionalBranchSeparatorAhead() {
        let idx = 0;
        let parenDepth = 0;
        let bracketDepth = 0;

        while (true) {
            const t = this.tokens.peek(idx);
            if (!t || t.type === "eof") return false;

            if (parenDepth === 0 && bracketDepth === 0) {
                if (t.type === ":") return true;
                if (t.type === "|" || t.type === "]") return false;
                if (idx > 0 && this.isRuleHeaderAheadAt(idx)) return false;
            }

            if (t.type === "(") {
                parenDepth += 1;
            } else if (t.type === ")") {
                if (parenDepth > 0) parenDepth -= 1;
            } else if (t.type === "[") {
                bracketDepth += 1;
            } else if (t.type === "]") {
                if (bracketDepth === 0) return false;
                bracketDepth -= 1;
            }

            idx += 1;
        }
    }

    parseRuleCall() {
        const name = this.tokens.expectId();
        const args = [];

        if (this.tokens.match("(")) {
            args.push(...this.expr.parseExpressionList(")"));
        }

        return {
            type: "rule_call",
            name,
            args
        };
    }

    parseRuleCallOrVariable() {
        const nameToken = this.tokens.peek();
        const name = this.tokens.expectId();

        if (this.tokens.match("(")) {
            const args = this.expr.parseExpressionList(")");

            return {
                type: "rule_call",
                name,
                args,
                pos: nameToken.pos,
                line: nameToken.line,
                col: nameToken.col
            };
        }

        return {
            type: "rule_call",
            name,
            args: [],
            pos: nameToken.pos,
            line: nameToken.line,
            col: nameToken.col
        };
    }

    parseIdentifierList(closeType = ")") {
        const values = [];
        if (this.tokens.match(closeType)) return values;

        while (true) {
            values.push(this.tokens.expectId());
            if (this.tokens.match(closeType)) break;
            if (this.tokens.match(",")) continue;
            const t = this.tokens.peek();
            if (t && t.type === "id") continue;
            const got = t ? `${t.type}:${t.value}` : "EOF";
            throw new Error(`Expected "," or ${closeType} in parameter list, got ${got}`);
        }

        return values;
    }

    expectOperatorCallOpen(op) {
        this.tokens.expect("(", undefined, `Expected "(" after operator ${op}`);
    }

    parseTransformLike() {
        const opTok = this.tokens.expect("id");
        const op = opTok.value;

        this.expectOperatorCallOpen(op);

        if (op === "A" || op === "R") {
            const a = this.expr.parseExpression({ stopAtSpacedUnaryBoundary: true });
            const b = this.expr.parseExpression({ stopAtSpacedUnaryBoundary: true });
            this.tokens.expect(")");
            return {
                type: "transform",
                op,
                args: [a, b],
                pos: opTok.pos,
                line: opTok.line,
                col: opTok.col
            };
        }

        if (["T", "S", "DSX", "DSY", "DSZ", "DTX", "DTY", "DTZ", "GDSX", "GDSY", "GDSZ", "GDTX", "GDTY", "GDTZ"].includes(op)) {
            const x = this.expr.parseExpression({ stopAtSpacedUnaryBoundary: true });
            const y = this.expr.parseExpression({ stopAtSpacedUnaryBoundary: true });
            const z = this.expr.parseExpression({ stopAtSpacedUnaryBoundary: true });
            this.tokens.expect(")");
            return {
                type: "transform",
                op,
                args: [x, y, z],
                pos: opTok.pos,
                line: opTok.line,
                col: opTok.col
            };
        }

        throw new Error(`Unsupported transform operator ${op} @${opTok.line}:${opTok.col}`);
    }
